@@ -96,11 +96,11 @@ public class WeightGaussianPerturbationValidator extends Worker {
     List<String> oldHeaders = readRecordsFromFile(inputFileName);
     oldHeaders = oldHeaders.stream().filter(headersToKeep::contains).collect(Collectors.toList());
     List<NamedFunction<Outcome, ?>> basicOutcomeFunctions = NamedFunctions.basicOutcomeFunctions();
-    List<String> basicOutcomeFunctionsNames = basicOutcomeFunctions.stream().map(NamedFunction::getName).collect(Collectors.toList());
+    List<String> basicOutcomeFunctionsNames = basicOutcomeFunctions.stream().map(NamedFunction::getName).toList();
     List<String> headers = oldHeaders.stream().map(h -> "event." + h).collect(Collectors.toList());
     headers.addAll(List.of("event.weight", "keys.validation.weight.sigma", "keys.validation.weight.seed"));
     headers.addAll(List.of("keys.validation.transformation", "keys.validation.seed", "keys.validation.terrain"));
-    headers.addAll(basicOutcomeFunctionsNames.stream().map(h -> "outcome." + h).collect(Collectors.toList()));
+    headers.addAll(basicOutcomeFunctionsNames.stream().map(h -> "outcome." + h).toList());
 
     try {
       printer.printRecord(headers);
@@ -112,7 +112,7 @@ public class WeightGaussianPerturbationValidator extends Worker {
       // read robot and record
       Robot robot = SerializationUtils.deserialize(record.get(serializedRobotColumnName), Robot.class, mode);
       robot.reset();
-      List<String> oldRecord = oldHeaders.stream().map(record::get).collect(Collectors.toList());
+      List<String> oldRecord = oldHeaders.stream().map(record::get).toList();
       CentralizedSensing centralizedSensing = (CentralizedSensing) robot.getController();
       Parametrized parametrized = (Parametrized) centralizedSensing.getFunction();
       double[] originalWeights = parametrized.getParams();
@@ -135,9 +135,9 @@ public class WeightGaussianPerturbationValidator extends Worker {
               cells.addAll(List.of(originalWeight, sigma, perturbationSeed, "identity", 0, "flat"));
               Locomotion locomotion = new Locomotion(episodeTime, Locomotion.createTerrain("flat"), new Settings());
               Outcome outcome = locomotion.apply(newRobot);
-              cells.addAll(basicOutcomeFunctions.stream().map(f -> f.apply(outcome.subOutcome(episodeTransientTime, episodeTime))).collect(Collectors.toList()));
+              cells.addAll(basicOutcomeFunctions.stream().map(f -> f.apply(outcome.subOutcome(episodeTransientTime, episodeTime))).toList());
               return cells;
-            }).collect(Collectors.toList());
+            }).toList();
         rows.forEach(row -> {
           try {
             printer.printRecord(row);
